arm/app/wordpress/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  ports:
  - port: 80
  selector:
    等等: d
  type: NodePort


---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        等等: d
    spec:
      containers:
      - image: wordpress
        name: wordpress
#        env:
#        - name: MYSQL_ROOT_PASSWORD
#          value: password
