arm/app/wordpress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wp
  namespace: app-wordpress
spec:
  rules:
  - host: wp.gwcloud.tk
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
